News
====

.. contents::

1.7.3
-----

* I got a fever and the only prescription is more :mod:`paste.cowbell`!

* Fix :mod:`paste.httpserver` on Python 2.6.

* Fix :mod:`paste.auth.cookie`, which would insert newlines for long
  cookies.

* :mod:`paste.util.mimeparse` parses a single ``*`` in Accept headers
  (sent by IE 6).

* Fix some problems with the ``wdg_validate`` middleware.

* Improvements to :mod:`paste.auth.auth_tkt`: add httponly support,
  don't always aggressively set cookies without the
  ``wildcard_cookie`` option.  Also on logout, make cookies expire.

* In :class:`paste.proxy.Proxy` handle Content-Length of -1.

* In :mod:`paste.httpexceptions` avoid some unicode errors.

* In :mod:`paste.httpserver` handle ``.read()`` from 100 Continue
  properly (because of a typo it was doing a readline).

* Update ``paste.util.mimeparse`` from `upstream
  <http://code.google.com/p/mimeparse/>`_.

1.7.2
-----

* In :mod:`paste.proxy`, added some more headers that are disallowed
  in WSGI (e.g., Keep-Alive).  Send Content-Length.  Also fix the
  missing query string when using :class:`paste.proxy.Proxy`
  (:class:`paste.proxy.TransparentProxy` already worked).

* Make :mod:`paste.debug.prints` work with Google App Engine.

* Make ``environ['wsgi.input']`` with :mod:`paste.httpserver` only
  have a ``seek`` method if it is wrapping something with a seek
  method (which usually it is not).

* In :mod:`paste.httpserver` re-raise KeyboardInterrupt in worker
  threads.

* Added support for the ``HttpOnly`` Cookie property to
  :mod:`paste.wsgiwrappers`

* Added :func:`paste.reloader.add_file_callback`, which lets you watch
  files based on a callback.

* Quiet Python 2.6 deprecation warnings.

* Fix :mod:`paste.auth.cookie` generating bad headers.

* Added :class:`paste.reloader.JythonMonitor` for an experimental,
  optimized reloader on Jython.

1.7.1
-----

* Normalize and make absolute the paths passed to